# booking_hotel_fastapi

./: .env.example  README.md  config.py  exceptions.py  main.py  pyproject.toml
admin/: admin.py  auth.py
bookings/: dao.py  model.py  router.py  scheme.py
dao/: base.py
hotels/: dao.py  model.py  router.py  scheme.py
hotels/rooms/: dao.py  model.py  router.py  scheme.py
images/: router.py
migrations/: env.py
migrations/versions/: 90391e41609f_initial_migration.py  d2c7190e7d51_initial_migration.py
pages/: router.py
tasks/: tasks.py
templates/: hotel_rooms.html  hotels.html  index.html  room.html
users/: dao.py  dependencies.py  model.py  router.py
