[tool.poetry]
name = "booking-hotel-fastapi"
version = "0.1.0"
description = ""
authors = ["Kettariec <kettariec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.31"
sqladmin = "^0.18.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
aiosmtplib = "^3.0.1"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
bcrypt = "4.0.1"
fastapi-cache = "^0.1.0"
redis = "^5.0.7"
fastapi-cache2 = "^0.2.1"
google-auth = "^2.32.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.137.0"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
